--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,5 @@ on:
           steps:
             - uses: actions/checkout@v2
             - name: Write a multi-line message
-              run:  |
-      echo This demo file shows a 
-      echo very basic and easy-to-understand workflow.
+              run:  echo changes pushed
+      
