--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Write a multi-line message
         run:  echo "changes pushed"
-      
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with: 
+          node-version: '20'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Running on dev
+        run: npm run dev
+       
