--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
       - name: Write a multi-line message
         run:  echo "changes pushed"
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with: 
+          node-version: '14'
 
       - name: Install Dependencies
         run: npm install
