--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Remove .next
+        run: rm -rf .next
+
       - name: Running on dev
         run: npm run dev
        
