--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
       - name: Remove .next
         run: rm -rf .next
