--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: checking files
         run: cd ./testnextjs
       - name: print working directory
-        run: ls -lart
+        run: pwd
       - name: checking files
         run: ls -lart
 
