--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
 
 
       - name: Install Dependencies
-        run: npm install
+        run: | 
+          cd testnextjs
+          npm install
 
       - name: checking files
         run: ls -lart
@@ -38,5 +40,7 @@ jobs:
         
 
       - name: Running next
-        run: npm run dev
+        run: |
+          cd testnextjs
+          npm run dev
        
