--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,6 @@ jobs:
       - name: Running next
         run: |
           cd testnextjs
+          npm install undici@latest
           npm run dev
        
