--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Install Dependencies
         run: | 
           cd testnextjs
+          rm -rf node_modules
+          rm -rf package-lock.json
           npm install
 
       - name: checking files
